# social-autoposter

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PRIVACY.md  README.md  SKILL.md  config.example.json  config.json  linkedin-e315.json  linkedin-e441.json  linkedin-e588.json  package-lock.json  package.json  pranjal-search-result  pyproject.toml  schema-octolens.sql  schema-postgres.sql  schema.sql  setup.sh  social_posts.db  syncfield.sh
browser-agent-configs/: linkedin-agent-mcp.json  linkedin-agent.json  reddit-agent-mcp.json  reddit-agent.json  twitter-agent-mcp.json  twitter-agent.json
dashboard/: package-lock.json  package.json  schema.sql
docs/: linux-setup.md
email-baison/: scan_replies.py  schema.sql
emailbison/: docs-full.txt  docs-index.txt  draft_replies.py  monitor_test.py  reply_dataset.py  reply_system_prompt.md  test_read.py
influencers/: README.md  candidate-qualification.md  contractor-onboarding.md  upwork-job-post.md
launchd/: com.m13v.seo-daily-report.plist  com.m13v.seo-weekly-roundup.plist  com.m13v.social-archive-logs.plist  com.m13v.social-audit-dm-staleness.plist  com.m13v.social-audit-linkedin.plist  com.m13v.social-audit-moltbook.plist  com.m13v.social-audit-reddit-resurrect.plist  com.m13v.social-audit-reddit.plist  com.m13v.social-audit-twitter.plist  com.m13v.social-audit.plist  com.m13v.social-autoposter-heartbeat.plist  com.m13v.social-autoposter.plist  com.m13v.social-click-followup-linkedin.plist  com.m13v.social-click-followup-reddit.plist  (+55 more)
public/: llms.txt
(+410 files in other folders)
